tests/fail/continue_what.vi

pub fn main(&io: &IO) {}

pub fn what(foo: Bool) {
  do {
    if foo {
      if foo {
        return;
      } else {
        continue;
      }
    }
  }
}
